--- a/index.htm
+++ b/index.htm
@@ -101,7 +101,7 @@
       <div style="background-color: rgb(1, 27, 59);" class="bcg skrollable skrollable-between" data-0="background-color:rgb(1,27,59);" data-top="background-color:(0,0,0);" data-anchor-target="#slide-2">
         <div class="hsContainer">
           <div class="hsContent">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data--200-bottom="opacity: 0" data-206-top="opacity: 1" data-106-top="opacity: 0" data-anchor-target="#slide-2 h2">Fade me in and out</h2>
+            <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data--200-bottom="opacity: 0" data-206-top="opacity: 1" data-106-top="opacity: 0" data-anchor-target="#slide-2 h2">Bin ich groß?</h2>
             <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data--200-bottom="opacity: 0" data-206-top="opacity: 1" data-106-top="opacity: 0" data-anchor-target="#slide-2 h2">Here we are changing the background color from blue to black. Text is fading in at 206 pixels from the bottom and fading out 106 pixels from the top.
             </p>
           </div>
