css angepasst. Schwarze balken haben nun eine automatische höhe und ein padding oben und unten

--- a/index.htm
+++ b/index.htm
@@ -14,11 +14,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
   <link rel="stylesheet" href="Dateien/normalize.css">
   <link rel="stylesheet" href="Dateien/main.css">
-  <script src="Dateien/modernizr-2.js"></script>
 
 </head>
 
@@ -36,7 +33,7 @@
     <section id="slide-1" class="homeSlide">
       <div class="bcg skrollable skrollable-between" data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -100px;" data-anchor-target="#slide-1">
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between" data-center="opacity: 1" data-106-top="opacity: 0" data-anchor-target="#slide-1 h2">
+          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between" data-center="opacity: 1"data-anchor-target="#slide-1 h2">
             <h2>…In einer Nacht vor langer Zeit…</h2>
           </div>
         </div>
@@ -46,8 +43,9 @@
       <div style="background-color: rgb(1, 27, 59);" class="bcg skrollable skrollable-between" data-0="background-color:rgb(1,27,59);" data-top="background-color:(0,0,0);" data-anchor-target="#slide-2">
         <div class="hsContainer">
           <div class="hsContent">
-          <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-200-bottom="opacity: 0" data-206-top="opacity: 1" data-106-top="opacity: 0" data-anchor-target="#slide-2 h2"></h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-200-bottom="opacity: 0" data-206-top="opacity: 1" data-106-top="opacity: 0" data-anchor-target="#slide-2 h2">"Luminus, fragst du dich nicht manchmal, wie ein sonnenheller Tag aussieht?". Diese Frage geht Schimmerie Harztropf, der kleinen
+          <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-2 h2"></h2>
+            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-2 h2">
+            "Luminus, fragst du dich nicht manchmal, wie ein sonnenheller Tag aussieht?". Diese Frage geht Schimmerie Harztropf, der kleinen
 Waldfee aus dem Wolfsburger Hasselbachtal, einfach nicht aus dem Kopf. Zu gern möchte sie ihren geliebten Wald einmal bei Tag
 erleben. Doch sobald die Sonne aufgeht, fallen Waldfeen in einen tiefen Zauberschlummer.
             </p>
@@ -59,7 +57,7 @@ erleben. Doch sobald die Sonne aufgeht, fallen Waldfeen in einen tiefen Zaubersc
       <div class="bcg skrollable skrollable-between" data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -100px;" data-anchor-target="#slide-3">
 
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between" data-center="opacity: 1" data-106-top="opacity: 0" data-anchor-target="#slide-3 h2">
+          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between" data-center="opacity: 1" data-anchor-target="#slide-3 h2">
             <h2>…Wir sind Geschöpfe der Nacht. Geheimnisvoll – magisch…</h2>
           </div>
         </div>
@@ -69,8 +67,8 @@ erleben. Doch sobald die Sonne aufgeht, fallen Waldfeen in einen tiefen Zaubersc
       <div style="background-color: rgb(1, 27, 59);" class="bcg skrollable skrollable-between" data-0="background-color:rgb(1,27,59);" data-top="background-color:(0,0,0);" data-anchor-target="#slide-4">
         <div class="hsContainer">
           <div class="hsContent">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-200-bottom="opacity: 0" data-206-top="opacity: 1" data-106-top="opacity: 0" data-anchor-target="#slide-4 h2"></h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-200-bottom="opacity: 0" data-206-top="opacity: 1" data-106-top="opacity: 0" data-anchor-target="#slide-4 h2">
+            <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-4 h2"></h2>
+            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-4 h2">
             In der Nacht des großen Sommerfestes streift Schimmerie mit ihrem besten Freund, dem Feenwolf Luminus, durch den Wald – auf
 der Suche nach Antworten. Dabei treffen sie auf ein paar interessante Waldbewohner wie den Waldkauz Fidelius Mausgraus, der den
 beiden gern von seinen Erlebnissen bei Tage berichtet.
