Leerzeilen in Schwarzen Balken entfernt und überflüssige Leer-Header entrümpelt. Die darauf folgenden data-anchor-targets mussten aber angepasst werden.

--- a/index.htm
+++ b/index.htm
@@ -43,8 +43,7 @@
       <div style="background-color: rgb(1, 27, 59);" class="bcg skrollable skrollable-between" data-0="background-color:rgb(1,27,59);" data-top="background-color:(0,0,0);" data-anchor-target="#slide-2">
         <div class="hsContainer">
           <div class="hsContent">
-          <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-2 h2"></h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-2 h2">
+            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-2">
             "Luminus, fragst du dich nicht manchmal, wie ein sonnenheller Tag aussieht?". Diese Frage geht Schimmerie Harztropf, der kleinen
 Waldfee aus dem Wolfsburger Hasselbachtal, einfach nicht aus dem Kopf. Zu gern möchte sie ihren geliebten Wald einmal bei Tag
 erleben. Doch sobald die Sonne aufgeht, fallen Waldfeen in einen tiefen Zauberschlummer.
@@ -67,8 +66,7 @@ erleben. Doch sobald die Sonne aufgeht, fallen Waldfeen in einen tiefen Zaubersc
       <div style="background-color: rgb(1, 27, 59);" class="bcg skrollable skrollable-between" data-0="background-color:rgb(1,27,59);" data-top="background-color:(0,0,0);" data-anchor-target="#slide-4">
         <div class="hsContainer">
           <div class="hsContent">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-4 h2"></h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-4 h2">
+            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-4">
             In der Nacht des großen Sommerfestes streift Schimmerie mit ihrem besten Freund, dem Feenwolf Luminus, durch den Wald – auf
 der Suche nach Antworten. Dabei treffen sie auf ein paar interessante Waldbewohner wie den Waldkauz Fidelius Mausgraus, der den
 beiden gern von seinen Erlebnissen bei Tage berichtet.
@@ -90,8 +88,7 @@ beiden gern von seinen Erlebnissen bei Tage berichtet.
       <div style="background-color: rgb(1, 27, 59);" class="bcg skrollable skrollable-between" data-0="background-color:rgb(1,27,59);" data-top="background-color:(0,0,0);" data-anchor-target="#slide-6">
         <div class="hsContainer">
           <div class="hsContent">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-6 h2"></h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-6 h2">
+            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-6">
             Doch plötzlich entdecken Schimmerie und Luminus einen magischen Faden, der mitten aus dem nächtlichen Blau vor ihren Nasen
 baumelt – und kurze Zeit später steht der ganze Himmel Kopf. Die beiden Freunde geraten in ein turbulentes Abenteuer, in dem
 Schimmeries Herzenswunsch auf ungewöhnliche Art und Weise wahr wird. Doch Unheil naht: Tag und Nacht drohen völlig
@@ -136,7 +133,6 @@ Mehr über die kreative Seite der Autorin: <a href="http://www.nicpic.de" target
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between" data-center="opacity: 1" data-anchor-target="#slide-9 h2">
             <h2>...Magische, wunderschöne Töne hüllten den Platz in pure Freude...</h2>
-
           </div>
         </div>
       </div>
@@ -145,11 +141,10 @@ Mehr über die kreative Seite der Autorin: <a href="http://www.nicpic.de" target
       <div style="background-color: rgb(1, 27, 59);" class="bcg skrollable skrollable-between" data-0="background-color:rgb(1,27,59);" data-top="background-color:(0,0,0);" data-anchor-target="#slide-10">
         <div class="hsContainer">
           <div class="hsContent">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-10 h2"></h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-10 h2">
+            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-10">
             Die Illustratorin Michaela Frech gestaltete die zauberhaften Charaktere und Hintergründe für "Schimmerie Harztropf und das Sternenmeer".
                Sie zeichnet, seit sie einen Stift halten kann. Ihre Werke wurden in vielen Ausstellungen gezeigt und schmücken zahlreiche Bücher. 
-              Heute lebt und arbeitet die Illustratorin in Fürth. Ihre Arbeitsschwerpunkte sind Kinderbücher, Fantasy und Tiermotive.<br />
+              Heute lebt und arbeitet die Illustratorin in Fürth. Ihre Arbeitsschwerpunkte sind Kinderbücher, Fantasy und Tiermotive.<br /><br />
               
               Mehr über Michaela Frech: www.michaela-frech.de
             </p>
@@ -162,7 +157,6 @@ Mehr über die kreative Seite der Autorin: <a href="http://www.nicpic.de" target
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between" data-center="opacity: 1" data-anchor-target="#slide-11 h2">
             <h2>Schimmerie im Planetarium Wolfsburg</h2>
-
           </div>
         </div>
       </div>
@@ -171,8 +165,7 @@ Mehr über die kreative Seite der Autorin: <a href="http://www.nicpic.de" target
       <div style="background-color: rgb(1, 27, 59);" class="bcg skrollable skrollable-between" data-0="background-color:rgb(1,27,59);" data-top="background-color:(0,0,0);" data-anchor-target="#slide-12">
         <div class="hsContainer">
           <div class="hsContent">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-12 h2"></h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-12 h2">
+            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-12">
             Das Planetarium in Wolfsburg zeigt die Geschichte von Schimmerie Harztropf für Kinder ab 5 Jahren. Den bekannten Bildern aus dem Buch 
               wurden noch beeindruckende Fulldome Grafiken und speziell angefertigte Panoramen hinzugefügt. Diverse Spezialeffekte heben die Erzählung 
               lebendig hervor, ohne die Kinder dabei mit zu vielen Bildern zu überfordern. Durch das neue 5.xy Soundsystem kommt die eigens dafür 
@@ -200,12 +193,10 @@ Cinzia Rizzo: "…"
       <div style="background-color: rgb(1, 27, 59);" class="bcg skrollable skrollable-between" data-0="background-color:rgb(1,27,59);" data-top="background-color:(0,0,0);" data-anchor-target="#slide-14">
         <div class="hsContainer">
           <div class="hsContent">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-14 h2"></h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-14 h2">
+            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-14">
             Wolfsburg hat weit mehr zu bieten als allgemein bekannt ist. Neben Volkswagen und einem abwechslungsreichen Kulturangebot für Groß und Klein, wurde Wolfsburg als erste Stadt in Niedersachsen als
  "kinderfreundliche Kommune" durch die Unicef ausgezeichnet.<br />
 Evtl. Kommentar vom Bürgermagazin?
-
             </p>
           </div>
         </div>
@@ -216,7 +207,6 @@ Evtl. Kommentar vom Bürgermagazin?
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between" data-center="opacity: 1" data-anchor-target="#slide-15 h2">
             <h2>Das Hasselbachtal lädt ein</h2>
-
           </div>
         </div>
       </div>
@@ -225,13 +215,12 @@ Evtl. Kommentar vom Bürgermagazin?
       <div style="background-color: rgb(1, 27, 59);" class="bcg skrollable skrollable-between" data-0="background-color:rgb(1,27,59);" data-top="background-color:(0,0,0);" data-anchor-target="#slide-16">
         <div class="hsContainer">
           <div class="hsContent">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-16 h2"></h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-16 h2">
+            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-16">
             Das Hasselbachtal... noch mehr Text für Wolfsburg. Natur - Lesungen an den bekannten Orten, in Schulen, in Senioreneinrichtungen 
               oder oder… text! . Beschreibung Stadtforst, Hasselbachtal. Natur Wichtigkeit<br/>
 
-Haben  Sie Interesse an einer Lesung?<br />
-mail@schimmerie-harztropf.de
+			Haben  Sie Interesse an einer Lesung?<br />
+			mail@schimmerie-harztropf.de
             </p>
           </div>
         </div>
@@ -242,7 +231,6 @@ mail@schimmerie-harztropf.de
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between" data-center="opacity: 1" data-anchor-target="#slide-17 h2">
             <h2>Kinderbuchverlag Biber &amp; Butzemann</h2>
-
           </div>
         </div>
       </div>
@@ -251,17 +239,16 @@ mail@schimmerie-harztropf.de
       <div style="background-color: rgb(1, 27, 59);" class="bcg skrollable skrollable-between" data-0="background-color:rgb(1,27,59);" data-top="background-color:(0,0,0);" data-anchor-target="#slide-18">
         <div class="hsContainer">
           <div class="hsContent">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-18 h2"></h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-18 h2">
+            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-18">
             In den Büchern des Kinderbuchverlages Biber &amp; Butzemann gehen kleine Helden auf große Reisen und erleben spannende Abenteuer. 
               Ferienzeit ist Lesezeit,  nicht nur für die Großen.  Die liebevoll illustrierten Geschichten spielen an den unterschiedlichsten 
               Orten in ganz Deutschland.  Gegründet wurde der Verlag 2010 von der Journalistin und Germanistin Steffi Bieber-Geske. Damals war 
               sie vergeblich auf der Suche nach einem schönen Kinderbuch für ihren Sohn über die Insel Rügen. Als sie nicht fündig wurde, schrieb 
               sie kurzerhand selbst eins. Während der Elternzeit mit ihrem zweiten Sohn legte Steffi Bieber-Geske den Grundstein für einen eigenen 
               Verlag und baute Biber &amp; Butzemann in den Folgejahren erfolgreich weiter aus. Mittlerweile arbeitet sie mit einem professionellen
-               Netzwerk aus Autoren, Illustratoren, Grafikern, Korrektoren, Auslieferern und Verlagsvertretern.<br/>
+               Netzwerk aus Autoren, Illustratoren, Grafikern, Korrektoren, Auslieferern und Verlagsvertretern.<br/><br />
                
-Weitere Informationen auf www.biber-butzemann.de
+			Weitere Informationen auf www.biber-butzemann.de
             </p>
           </div>
         </div>
@@ -270,9 +257,8 @@ Weitere Informationen auf www.biber-butzemann.de
          <section id="slide-19" class="homeSlide">
       <div class="bcg skrollable skrollable-between" data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -100px;" data-anchor-target="#slide-19">
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between" data-center="opacity: 1" data-anchor-target="#slide-19 h2">
-            <h2></h2>
-
+          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between" data-center="opacity: 1" data-anchor-target="#slide-19">
+          &nbsp;
           </div>
         </div>
       </div>
@@ -281,8 +267,7 @@ Weitere Informationen auf www.biber-butzemann.de
       <div style="background-color: rgb(1, 27, 59);" class="bcg skrollable skrollable-between" data-0="background-color:rgb(1,27,59);" data-top="background-color:(0,0,0);" data-anchor-target="#slide-20">
         <div class="hsContainer">
           <div class="hsContent">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-20 h2"></h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-20 h2">
+            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-20">
             "Schimmerie Harztropf und das Sternenmeer" ist überall im Buchhandel und an einigen weiteren Verkaufsstellen in Wolfsburg erhältlich.<br/>
 Besonderer Dank geht an:<br />
 Das Team des Planetariums Wolfsburg<br />
@@ -299,7 +284,6 @@ Norman Nowack, Geschäftsführer REAL-Markt Nordsteimke<br />
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between" data-center="opacity: 1" data-anchor-target="#slide-21 h2">
             <h2>...und mit einem mäuselauten ADIEU! verabschiedete sich das tapfere Mäuschen und flitzte...</h2>
-
           </div>
         </div>
       </div>
@@ -308,8 +292,7 @@ Norman Nowack, Geschäftsführer REAL-Markt Nordsteimke<br />
       <div style="background-color: rgb(1, 27, 59);" class="bcg skrollable skrollable-between" data-0="background-color:rgb(1,27,59);" data-top="background-color:(0,0,0);" data-anchor-target="#slide-22">
         <div class="hsContainer">
           <div class="hsContent">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-22 h2"></h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-22 h2">
+            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-22">
             Möchtest Du Schimmerie schreiben?<br/>
 Sie freut sich riesig über Deine Post und wird Dir ganz bestimmt eine Antwort schicken!<br/>
 hallo@schimmerie-harztropf.de
@@ -323,7 +306,6 @@ hallo@schimmerie-harztropf.de
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between" data-center="opacity: 1" data-anchor-target="#slide-23 h2">
             <h2>Impressum</h2>
-
           </div>
         </div>
       </div>
@@ -332,8 +314,7 @@ hallo@schimmerie-harztropf.de
       <div style="background-color: rgb(1, 27, 59);" class="bcg skrollable skrollable-between" data-0="background-color:rgb(1,27,59);" data-top="background-color:(0,0,0);" data-anchor-target="#slide-24">
         <div class="hsContainer">
           <div class="hsContent">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-200-bottom="opacity: 1" data-206-top="opacity: 1" data-anchor-target="#slide-24 h2"></h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-200-bottom="opacity: 1" data-206-top="opacity: 1" data-anchor-target="#slide-24 h2">
+            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-24">
             Impressumsangaben gemäß § 5 TMG | Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:<br />
 Nicole Schaa |   Freischaffende Künstlerin<br />
 Unter den Eichen 47 |   Steimker Berg |  38446 Wolfsburg<br />
