--- a/index.htm
+++ b/index.htm
@@ -40,7 +40,7 @@
       </div>
     </section>
     <section id="slide-2">
-      <div style="background-color: #343e66;" class="bcg skrollable skrollable-between" data-0="background-color: #343e66;" data-top="background-color:#343e66);" data-anchor-target="#slide-2">
+      <div style="background-color: #343e66;" class="bcg skrollable skrollable-between" data-0="background-color: #343e66;" data-top="background-color:#343e66;" data-anchor-target="#slide-2">
         <div class="hsContainer">
           <div class="hsContent text-justify">
             <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-2">
