--- a/index.htm
+++ b/index.htm
@@ -114,13 +114,12 @@
               DESIGN als freischaffende Künstlerin in Berlin selbständig. Inzwischen lebt sie zusammen mit ihrer kleinen Familie am Stadtrand von Wolfsburg und genießt die unmittelbare Nähe zum Wald. Inspiriert durch ihre Tochter fing sie an, deren quirlige
               Kindergedanken über Feen und andere magische Zauberwesen aufzuschreiben und weiterzuspinnen. Bei Ihren zahlreichen Touren durch den geliebten Stadtforst heckt sie schließlich die geheimen Schauplätze und Ideen für Ihre Geschichten aus. </p>
 
-            <p style="opacity: 0;" class="skrollable skrollable-before  text-center" data-center="opacity: 1" data-anchor-target="#slide-8 h2">
-              "Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2."
-              <br /> evtl. Ehme de Riese, Titel</p>
-            <p style="opacity: 0;" class="skrollable skrollable-before text-center" data-center="opacity: 1" data-anchor-target="#slide-8 h2">
-              "Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2."
-              <br /> Sabine Schröter, Thalia Wolfsburg, Kinderbuchabteilung
-            </p>
+            <p class="zitat text-center">
+              "Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2."</p>
+            <p class="fan-red text-center"> evtl. Ehme de Riese, Titel</p>
+            <p class="zitat text-center">
+              "Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2."</p>
+            <p class="fan-red text-center"> Sabine Schröter, Thalia Wolfsburg, Kinderbuchabteilung</p>
 
             <p style="opacity: 0;" class="skrollable skrollable-before text-center" data-center="opacity: 1" data-anchor-target="#slide-8 h2">
               Weitere kreative Seiten der Autorin: <a href="http://www.nicpic.de">www.nicpic.de</a></p>
@@ -172,23 +171,26 @@
           <div class="hsContent text-justify">
             <h2 style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-12">
             Das Planetarium in Wolfsburg </h2>
-            <p>zeigt das im Frühjahr 2016 als Kinderbuchbuch erschienene Feenmärchen der Wolfsburger Autorin Nicole Schaa und nimmt Sie mit auf eine magische Abenteuerreise quer durch das Wolfsburger Hasselbachtal. Unter der Kuppel des Planetariums erwacht
-              die Welt von Schimmerie Harztropf unter dem nächtlichen Sternenhimmel zum Leben.
-              <br />
-              <br /> Bekannte Sprecher wie Wolfram Eicke, Beate Ohlendorf, Cinzia und Ricardo Rizzo geben den charakterstarken Akteuren des Buches ihre Stimme. Für die außergewöhnlichen Kuppel-Animation  erstellte die Kinderbuch- Illustratorin Michaela Frech
+            <p class="skrollable">zeigt das im Frühjahr 2016 als Kinderbuchbuch erschienene Feenmärchen der Wolfsburger Autorin Nicole Schaa und nimmt Sie mit auf eine magische Abenteuerreise quer durch das Wolfsburger Hasselbachtal. Unter der Kuppel des Planetariums erwacht
+              die Welt von Schimmerie Harztropf unter dem nächtlichen Sternenhimmel zum Leben.</p>
+<p class="skrollable">Bekannte Sprecher wie Wolfram Eicke, Beate Ohlendorf, Cinzia und Ricardo Rizzo geben den charakterstarken Akteuren des Buches ihre Stimme. Für die außergewöhnlichen Kuppel-Animation  erstellte die Kinderbuch- Illustratorin Michaela Frech
               zusätzliche Fulldome - Grafiken und Panoramen. Akzentuierte Spezialeffekte, hinzugefügt von Isabell Schaffer, heben die Erzählung lebendig hervor, ohne die Kinder dabei mit zu vielen Bildern zu überfordern.</p>
-            <p>
-              <br /> Die eigens dafür komponierte Musik stammt aus der Feder des Wolfsburger Musikers Matthias Klingebiel. Um den richtigen Ton kümmerten sich die Wolfsburger Musikschule in Zusammenarbeit mit dem Tonstudio Lübeck.</p>
-            <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-12">
-              <br /> "Dies sind 2 nette Sätze über das Buch/die Kuppelshow. Hier kommt Nummer 2."
-              <br /> Dirk Schlesier, wissenschaftlicher Leiter des Planetariums in Wolfsburg
-              <br />
-              <br /> "Dies sind 2 nette Sätze über das Buch/die Kuppelshow. Hier kommt Nummer 2."
-              <br /> Isabell Schaffer, pädagogische Mitarbeiterin des Planetariums in Wolfsburg
-              <br />
-              <br /> "Dies sind 2 nette Sätze über das Buch/die Kuppelshow. Hier kommt Nummer 2."
-              <br /> Cinzia Rizzo, Sprecherin "Schimmerie" und "Lusilla Trälla"
-              <br /> hauptberuflich Sängerin und Mitarbeiterin des Tanzenden Theaters Wolfsburg
+            <p class="skrollable">
+            Die eigens dafür komponierte Musik stammt aus der Feder des Wolfsburger Musikers Matthias Klingebiel. Um den richtigen Ton kümmerten sich die Wolfsburger Musikschule in Zusammenarbeit mit dem Tonstudio Lübeck.</p>
+
+             <p class="zitat text-center">
+              "Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2."</p>
+            <p class="fan-yellow text-center"> 
+               Dirk Schlesier, wissenschaftlicher Leiter des Planetariums in Wolfsburg</p>
+              
+                           <p class="zitat text-center">
+              "Dies sind 2 nette Sätze über das Buch/die Kuppelshow. Hier kommt Nummer 2."</p>            <p class="fan-yellow text-center"> 
+               Isabell Schaffer, pädagogische Mitarbeiterin des Planetariums in Wolfsburg</p>
+              
+                           <p class="zitat text-center">
+               "Dies sind 2 nette Sätze über das Buch/die Kuppelshow. Hier kommt Nummer 2."</p>            <p class="fan-yellow text-center"> 
+               Cinzia Rizzo, Sprecherin "Schimmerie" und "Lusilla Trälla"<br />
+               hauptberuflich Sängerin und Mitarbeiterin des Tanzenden Theaters Wolfsburg</p>
             </p>
           </div>
         </div>
@@ -281,16 +283,17 @@
     <section id="slide-20">
       <div style="background-color: #ccab15;" class="bcg skrollable skrollable-between" data-0="background-color: #ccab15;" data-top="background-color: #ccab15;" data-anchor-target="#slide-20">
         <div class="hsContainer">
-          <div class="hsContent text-justify">
+          <div class="hsContent text-center">
             <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-20">
               "Schimmerie Harztropf und das Sternenmeer" ist überall im Buchhandel
               <br /> und an einigen weiteren Verkaufsstellen in Wolfsburg erhältlich.
               <br />
               <br/>
             </p>
-            <p align="center">Möchtest Du Schimmerie schreiben? Sie freut sich riesig
-              <br /> über Deine Post und wird Dir ganz bestimmt eine Antwort schicken!</p>
-            <a href="mailto:hallo@schimmerie-harztropf.de">hallo@schimmerie-harztropf.de</a> </div>
+            <p >Möchtest Du Schimmerie schreiben? Sie freut sich riesig
+              <br /> über Deine Post und wird Dir ganz bestimmt eine Antwort schicken!
+              <br />
+            <a href="mailto:hallo@schimmerie-harztropf.de">hallo@schimmerie-harztropf.de</a> </p></div>
         </div>
       </div>
     </section>
@@ -325,7 +328,7 @@
       <div class="bcg skrollable skrollable-between" data-center="background-position: 50% 0px;" data-top-bottom="background-position: 50% -100px;" data-anchor-target="#slide-23">
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between" data-center="opacity: 1" data-anchor-target="#slide-23 h2">
-            <h2>Impressum</h2>
+            <h2>Impressum &amp; Kontakt</h2>
           </div>
         </div>
       </div>
@@ -333,31 +336,30 @@
     <section id="slide-24">
       <div style="background-color: #343d66;" class="bcg skrollable skrollable-between" data-0="background-color: #343d66;" data-top="background-color: #343d66;" data-anchor-target="#slide-24">
         <div class="hsContainer">
-          <div class="hsContent">
-            <p align="center">Impressumsangaben gemäß § 5 TMG | Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:
-              <br />
-              <br /> Nicole Schaa |   Freischaffende Künstlerin
+          <div class="hsContent text-justify">
+          <p class="text-center">KONTAKT<br/>
+<br /> Nicole Schaa | Freischaffende Künstlerin | Autorin
               <br /> Unter den Eichen 47 |   Steimker Berg |  38446 Wolfsburg
-              <br /> Telefon: 05361/8481348 |   E-Mail: mail@nicpic.de
+<br /> Telefon: 0 53 61 / 8 48 13 48 | E-Mail: <a href="mailto:hallo@schimmerie-harztropf.de">hallo@schimmerie-harztropf.de</a><br/>
+          </p>
+            <p class="text-center">  Umsatzsteuer-ID gemäß §27 a UStG: DE 227 520 707
               <br />
-              <br /> Umsatzsteuer-Identifikationsnummer gemäß §27 a Umsatzsteuergesetz: DE 227 520 707
-              <br />
-              <br /> Foto vom Hasselbachtal: <u>Nicole Schaa</u>
-              <br /> Illustrationen: <u>Michaela Frech</u>
-              <br /> Stockfotos: <u>Shutterstock</u>
+              <br /> Foto vom Hasselbachtal: Nicole Schaa
+              <br /> Illustrationen: Michaela Frech
+              <br /> Stockfotos: Shutterstock
               <br />
             </p>
-            <p align="center">
+            <p>
               <br /> Haftungsausschluss | Haftung für Inhalte
               <br /> Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte
               fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon
               unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
-            <p align="center">
+            <p>
               <br /> Haftung für Links
               <br /> Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige
               Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente
               inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
-            <p align="center">
+            <p>
               <br /> Urheberrecht
               <br /> Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen
               der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden,
@@ -366,9 +368,9 @@
               <br />
               <br />
             </p>
-            <p align="center"> Quelle: <u>http://www.e-recht24.de</u></p>
+            <p> Quelle: <u>http://www.e-recht24.de</u></p>
             <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-24">
-              <br />
+ Impressumsangaben gemäß § 5 TMG | Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV
             </p>
           </div>
         </div>
