--- a/index.htm
+++ b/index.htm
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if lt IE 7]>      <html class="no-js"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html style="" class="js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage no-websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients no-cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths no-ie8compat skrollr skrollr-desktop">
+<html class="krollr skrollr-desktop">
 <!--<![endif]-->
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>Schimmerie Harztropf und das Sternenmeer- von Nicole Schaa - Illustrationen von Michaela Frech</title>
+  <title>Schimmerie Harztropf und das Sternenmeer - von Nicole Schaa - Illustrationen von Michaela Frech</title>
   <meta name="description" content="Das Zuhause von der Hasselbacher Waldfee Schimmerie Harztropf und ihrem Gefährten Luminus, dem Feenwolf." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
@@ -218,7 +218,6 @@
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between" data-center="opacity: 1" data-anchor-target="#slide-13 h2">
             <h2>Kinder, Kinder!</h2>
-
           </div>
         </div>
       </div>
@@ -440,5 +439,4 @@
   <script src="Dateien/skrollr.js"></script>
   <script src="Dateien/_main.js"></script>
 </body>
-
 </html>
