--- a/index.htm
+++ b/index.htm
@@ -64,7 +64,7 @@
       </div>
     </section>
     <section id="slide-4">
-      <div style="background-color: #457056;" class="bcg skrollable skrollable-between" data-0="background-color:rgb #457056;" data-top="background-color: #457056;" data-anchor-target="#slide-4">
+      <div style="background-color: #457056;" class="bcg skrollable skrollable-between" data-0="background-color: #457056;" data-top="background-color: #457056;" data-anchor-target="#slide-4">
         <div class="hsContainer">
           <div class="hsContent text-justify">
             <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-4">
