Styling geöndert, Zitate ausgeblendet, Links umgebaut
zitatstyling umgestylet. Titel größer aber regular font, Zitate ausgeblendet. Impressum halbe Größe

--- a/index.htm
+++ b/index.htm
@@ -122,13 +122,13 @@
               geliebten Stadtforst heckt sie schließlich die geheimen Schauplätze und Ideen für Ihre Geschichten aus.
             </p>
 
+            <!--<p class="zitat text-center">
+              &bdquo;Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2.&rdquo;</p>
+            <p class="fan fan-red text-center"> evtl. Ehme de Riese, Titel</p>
             <p class="zitat text-center">
-              "Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2."</p>
-            <p class="fan-red text-center"> evtl. Ehme de Riese, Titel</p>
-            <p class="zitat text-center">
-              "Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2."</p>
-            <p class="fan-red text-center"> Sabine Schröter, Thalia Wolfsburg, Kinderbuchabteilung</p>
-
+              &bdquo;Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2.&rdquo;</p>
+            <p class="fan fan-red text-center"> Sabine Schröter, Thalia Wolfsburg, Kinderbuchabteilung</p>
+ -->
             <p style="opacity: 0;" class="skrollable skrollable-before text-center" data-center="opacity: 1" data-anchor-target="#slide-8 h2">
               Weitere kreative Seiten der Autorin: <a href="http://www.nicpic.de">www.nicpic.de</a></p>
           </div>
@@ -192,22 +192,27 @@
               Die eigens dafür komponierte Musik stammt aus der Feder des Wolfsburger Musikers Matthias Klingebiel. Um den richtigen Ton kümmerten 
               sich die Wolfsburger Musikschule in Zusammenarbeit mit dem Tonstudio Lübeck.</p>
 
-            <p class="zitat text-center">
-              "Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2."</p>
-            <p class="fan-yellow text-center">
+           <!-- <p class="zitat text-center">
+              &bdquo;Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2.&rdquo;
+              </p>
+            <p class="fan fan-light-blue text-center">
               Dirk Schlesier, wissenschaftlicher Leiter des Planetariums in Wolfsburg</p>
 
             <p class="zitat text-center">
-              "Dies sind 2 nette Sätze über das Buch/die Kuppelshow. Hier kommt Nummer 2."</p>
-            <p class="fan-yellow text-center">
-              Isabell Schaffer, pädagogische Mitarbeiterin des Planetariums in Wolfsburg</p>
+              &bdquo;Dies sind 2 nette Sätze über das Buch/die Kuppelshow. Hier kommt Nummer 2.&rdquo;
+              </p>
+            <p class="fan fan-light-blue text-center">
+              Isabell Schaffer, pädagogische Mitarbeiterin des Planetariums in Wolfsburg
+              </p>
 
             <p class="zitat text-center">
-              "Dies sind 2 nette Sätze über das Buch/die Kuppelshow. Hier kommt Nummer 2."</p>
-            <p class="fan-yellow text-center">
+              &bdquo;Dies sind 2 nette Sätze über das Buch/die Kuppelshow. Hier kommt Nummer 2.&rdquo;
+              </p>
+            <p class="fan fan-light-blue text-center">
               Cinzia Rizzo, Sprecherin "Schimmerie" und "Lusilla Trälla"
-              <br /> hauptberuflich Sängerin und Mitarbeiterin des Tanzenden Theaters Wolfsburg</p>
-            </p>
+              <br /> hauptberuflich Sängerin und Mitarbeiterin des Tanzenden Theaters Wolfsburg
+              </p> 
+            </p> -->
           </div>
         </div>
       </div>
@@ -236,15 +241,19 @@
             	Elementen, und das bei so ziemlich jedem Wetter.  Die sinnliche Erfahrung beim freien Spiel mit dem, was Wald und Wiesen zu bieten 
             	haben, ist für ihre persönliche Entwicklung unerlässlich. Unter freiem Himmel gedeihen der Verstand und das soziale Miteinander am 
             	besten, denn der Phantasie sind dort keine Grenzen gesetzt…
-
-              <br />
-              <p class="zitat text-center">"Dies sind 2 nette Sätze über das Buch?/Wolfsburg.... Hier kommt Nummer 2."
-                <br> Stephanie Ristig- Bresser, Redakteurin beim 'Bürgermagazin' Wolfsburg
-                <br>
-                <br> "Wetter ist, wenn man draußen ist!"
-                <br> Leticia, 4 Jahre
-              </p>
             </p>
+            <p class="zitat text-center">
+            	"Wetter ist, wenn man draußen ist!"
+            </p>
+            <p class="fan fan-dark-blue text-center">
+            	Leticia, 4 Jahre
+            </p>
+              <!--<p class="zitat text-center">
+              &bdquo;Dies sind 2 nette Sätze über das Buch?/Wolfsburg.... Hier kommt Nummer 2.&rdquo;
+              </p>
+            <p class="fan fan-dark-blue text-center">
+              Stephanie Ristig- Bresser, Redakteurin beim 'Bürgermagazin' Wolfsburg
+              </p> -->
           </div>
         </div>
       </div>
@@ -269,14 +278,12 @@
               ihrer märchenhaften Geschichte. Für Liebhaber der naturnahen Feensage finden in den warmen Monaten des Jahres
               Lesungen entlang dieser Route statt. Gute Schuhe, gute Laune und Klappstühle sind sinnvolle Mitbringsel für diese kleine Phantasiereise 
               in die Wolfsburger Feenwelt.
-              <br/>
-              <br />
-              <p class="text-center">Haben Sie Interesse an einer Lesung in der freien Natur
-                <br /> und möchten gerne mehr darüber erfahren?
-                <br /> hallo@schimmerie-harztropf.de
-              </p>
-
             </p>
+            <p class="text-center">Haben Sie Interesse an einer Lesung in der freien Natur
+                <br /> und möchten gerne mehr darüber erfahren?
+                <br /> <a href="&#109;&#097;&#105;&#108;&#116;&#111;:hallo&#064;schimmerie&#045;harztropf.de">
+              <span class=lelink>hallo&#064;</span>schimmerie&#045;harztropf.de</a>
+              </p>
           </div>
         </div>
       </div>
@@ -305,7 +312,7 @@
               Grafikern, Korrektoren, Auslieferern und Verlagsvertretern.
               <br />
               <br />
-              <p class="text-center">Weitere Informationen auf: www.biber-butzemann.de</p>
+              <p class="text-center">Weitere Informationen auf: <a href="http://www.biber-butzemann.de" target="_blank">www.biber-butzemann.de</a></p>
             </p>
           </div>
         </div>
@@ -341,7 +348,9 @@
             <p>Möchtest Du Schimmerie schreiben? Sie freut sich riesig
               <br /> über Deine Post und wird Dir ganz bestimmt eine Antwort schicken!
               <br />
-              <a href="mailto:hallo@schimmerie-harztropf.de">hallo@schimmerie-harztropf.de</a> </p>
+              <a href="&#109;&#097;&#105;&#108;&#116;&#111;:hallo&#064;schimmerie&#045;harztropf.de">
+              <span class=lelink>hallo&#064;</span>schimmerie&#045;harztropf.de</a>
+            </p>
           </div>
         </div>
       </div>
@@ -391,7 +400,8 @@
               <br/>
               <br /> Nicole Schaa | Freischaffende Künstlerin | Autorin
               <br /> Unter den Eichen 47 |   Steimker Berg |  38446 Wolfsburg
-              <br /> Telefon: 0 53 61 / 8 48 13 48 | E-Mail: <a href="mailto:hallo@schimmerie-harztropf.de">hallo@schimmerie-harztropf.de</a>
+              <br /> Telefon: 0 53 61 / 8 48 13 48 | E-Mail: <a href="&#109;&#097;&#105;&#108;&#116;&#111;:hallo&#064;schimmerie&#045;harztropf.de">
+              <span class=lelink>hallo&#064;</span>schimmerie&#045;harztropf.de</a>
               <br/>
             </p>
             <p class="text-center"> Umsatzsteuer-ID gemäß §27 a UStG: DE 227 520 707
@@ -401,6 +411,7 @@
               <br /> Stockfotos: Shutterstock
               <br />
             </p>
+            <div class="impressum">
             <p>
               <br /> Haftungsausschluss | Haftung für Inhalte
               <br /> Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte
@@ -421,6 +432,7 @@
               <br />
             </p>
             <p> Quelle: <u>http://www.e-recht24.de</u></p>
+            </div>
             <p style="opacity: 0;" class="skrollable skrollable-before" data-center="opacity: 1" data-anchor-target="#slide-24">
               Impressumsangaben gemäß § 5 TMG | Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV
             </p>
